--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <!--1st card-modal-card section -->
                 <div class="card w-80 bg-base-100 border border-gray-300 p-4 mx-auto">
                     <figure class="px-10 pt-10">
-                        <img src="/images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                        <img src="./images/fruit6.png" alt="Apples" class="rounded-xl" />
                     </figure>
                     <div class="card-body space-y-4 items-center text-center">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
@@ -257,7 +257,7 @@
                                 <form method="dialog" class="modal-box">
                                     <div class="card w-96 mx-auto bg-base-100 ">
                                         <figure class="px-10 pt-10">
-                                          <img src="/images/fruit6.png" alt="Shoes" class="rounded-xl" />
+                                          <img src="./images/fruit6.png" alt="" class="rounded-xl" />
                                         </figure>
                                         <div class="card-body items-center text-center space-y-4">
                                             <p class="font-medium">Apples</p>
@@ -294,7 +294,7 @@
                 <!--2nd card-modal-card section -->            
                 <div class="card w-80 bg-base-100  border border-gray-300 p-4 mx-auto">
                     <figure class="px-10 pt-10">
-                        <img src="/images/fruit7.png" alt="Shoes" class="rounded-xl" />
+                        <img src="./images/fruit7.png" alt="Orange" class="rounded-xl" />
                     </figure>
                     <div class="card-body space-y-4 items-center text-center">
                         <h2 class="card-title">14.90$ - 17.85$</h2>
@@ -323,7 +323,7 @@
                                 <form method="dialog" class="modal-box">
                                     <div class="card w-96 mx-auto bg-base-100 ">
                                         <figure class="px-10 pt-10">
-                                          <img src="/images/fruit7.png" alt="Shoes" class="rounded-xl" />
+                                          <img src="./images/fruit7.png" alt="Orange" class="rounded-xl" />
                                         </figure>
                                         <div class="card-body items-center text-center space-y-4">
                                             <p class="font-medium">Orange</p>
@@ -360,7 +360,7 @@
             <!--3rd card-modal-card section -->            
                 <div class="card w-80 bg-base-100  border border-gray-300 p-4 mx-auto">
                     <figure class="px-10 pt-10">
-                        <img src="/images/fruit8.png" alt="Shoes" class="rounded-xl" />
+                        <img src="./images/fruit8.png" alt="Red Dragon" class="rounded-xl" />
                     </figure>
                     <div class="card-body space-y-4 items-center text-center">
                         <h2 class="card-title">22.90$ - 19.45$</h2>
@@ -389,7 +389,7 @@
                                 <form method="dialog" class="modal-box">
                                     <div class="card w-96 mx-auto bg-base-100 ">
                                         <figure class="px-10 pt-10">
-                                          <img src="/images/fruit8.png" alt="Shoes" class="rounded-xl" />
+                                          <img src="./images/fruit8.png" alt="Shoes" class="rounded-xl" />
                                         </figure>
                                         <div class="card-body items-center text-center space-y-4">
                                             <p class="font-medium">Red Dragon</p>
@@ -427,7 +427,7 @@
             <!--4th card-modal-card section --> 
                 <div class="card w-80 bg-base-100  border border-gray-300 p-4 mx-auto">
                     <figure class="px-10 pt-10">
-                        <img src="/images/fruit9.png" alt="Shoes" class="rounded-xl" />
+                        <img src="./images/fruit9.png" alt="Banana" class="rounded-xl" />
                     </figure>
                     <div class="card-body space-y-4 items-center text-center">
                         <h2 class="card-title">15.90$ - 19.75$</h2>
@@ -456,7 +456,7 @@
                                 <form method="dialog" class="modal-box">
                                     <div class="card w-96 mx-auto bg-base-100 ">
                                         <figure class="px-10 pt-10">
-                                          <img src="/images/fruit9.png" alt="Shoes" class="rounded-xl" />
+                                          <img src="./images/fruit9.png" alt="Banana" class="rounded-xl" />
                                         </figure>
                                         <div class="card-body items-center text-center space-y-4">
                                             <p class="font-medium">Banana</p>
@@ -576,7 +576,7 @@
             <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
             <div class="grid grid-cols-1 lg:grid-cols-3">
                 <div>
-                    
+
                 </div>
 
             </div>
