footer section changes added

--- a/index.html
+++ b/index.html
@@ -575,6 +575,7 @@
                 <h1 class="font-extrabold text-4xl">Why Choose US</h1>
             <p>Expertise, customer focus, quality products, innovation, competitive pricing <br>your best choice for a healthy life.</p>
             </div>
+            <!-- large device -->
             <div class="hidden lg:grid lg:grid-cols-3 mx-auto mt-16">
                 
                 <div class="space-y-4 mx-auto">
