new changes in deals section

--- a/index.html
+++ b/index.html
@@ -186,33 +186,33 @@
 
         <!-- deal of the day section -->
         <section>
-            <div class=" p-4 lg:mt-40 flex flex-col items-center md:flex-row justify-center md:justify-between mx-auto">
-                <div>
+            <div class=" p-4 lg:mt-40 flex flex-col  md:flex-row md:items-center justify-center md:justify-between mx-auto gap-4">
+                <div class="text-center md:text-left">
                     <h2 class="text-5xl font-extrabold ">Deal of the day</h2>
-                    <p class="text-[#12121299]">Contrary to popular belief, is not simply random text. It has roots in a
-                        piece of classical <br>Latin literature from 45 BC, making it over 2000 years old.</p>
+                    <p class="text-[#12121299]">Contrary to popular belief, is not simply random text. It has roots <br>in a
+                        piece of classical Latin literature from <br>45 BC, making it over 2000 years old.</p>
                 </div>
-                <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
+                <div class="grid grid-flow-col gap-5 text-center ">
                     <div class="flex flex-col">
-                        <span class="countdown text-gray-600  text-4xl">
+                        <span class="countdown text-gray-600 text-3xl  md:text-5xl">
                             <span class="pr-5 text-black" style="--value:28;"></span>:
                         </span>
                         days
                     </div>
-                    <div class="flex flex-col">
-                        <span class="countdown text-gray-600  text-4xl">
+                    <div class="flex flex-col text-center">
+                        <span class="countdown text-gray-600  text-3xl  md:text-5xl">
                             <span class="pr-5 text-black" style="--value:15;"></span>:
                         </span>
                         hours
                     </div>
                     <div class="flex flex-col">
-                        <span class="countdown text-gray-600  text-4xl">
+                        <span class="countdown text-gray-600  text-3xl  md:text-5xl">
                             <span class="pr-5 text-black" style="--value:24;"></span>:
                         </span>
                         min
                     </div>
                     <div class="flex flex-col">
-                        <span class="countdown text-gray-600 text-4xl">
+                        <span class="countdown text-gray-600 text-3xl  md:text-5xl">
                             <span class="pr-5 text-black" style="--value:2;"></span>
                         </span>
                         sec
@@ -576,7 +576,7 @@
             <p>Expertise, customer focus, quality products, innovation, competitive pricing <br>your best choice for a healthy life.</p>
             </div>
             <!-- large device -->
-            <div class="hidden lg:grid lg:grid-cols-3 mx-auto mt-16">
+            <div class="hidden lg:grid lg:grid-cols-3 mx-auto mt-16 px-4">
                 
                 <div class="space-y-4 mx-auto">
                     <div class="flex flex-col md:flex-row items-center gap-4">
@@ -638,7 +638,7 @@
             </div>
 
             <!-- why choose us section grid for medium and smaller device -->
-            <div class="flex flex-col lg:hidden gap-10 text-center mx-auto mt-16">
+            <div class="flex flex-col lg:hidden gap-10 text-center mx-auto mt-16 ">
                 
                 <div class="mx-auto">
                     <img class="mx-auto p-2 max-w-[320px]" src="./images/whychoose1.png" alt="">
