--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <header class="container mx-auto">
         <!-- navbar -->
         <nav>
-            <div class="mt-5 rounded-l-full rounded-r-full navbar text-black md:bg-[#F85559] lg:text-white">
+            <div class="mt-5 rounded-l-full rounded-r-full navbar text-black md:bg-[#F85559] md:text-white">
                 <div class="navbar-start">
                     <div class="lg:hidden flex">
-                        <img class="w-8 h-8" src="./images/logo.png" alt="">
-                        <a class="ml-4 font-bold text-3xl">Fruit Burst</a>
+                        <img class="w-10 " src="./images/logo.png" alt="">
+                        <a class="ml-4 font-extrabold text-3xl">Fruit Burst</a>
                     </div>
                     <div class=" hidden lg:flex">
                         <ul class="menu menu-horizontal px-1 font-medium text-lg">
@@ -44,7 +44,7 @@
                     <img src="./images/logo.png" alt="">
                     <a class="ml-4 font-old text-4xl">Fruit Burst</a>
                 </div>
-                <div class="navbar-end md:w-1/3">
+                <div class="navbar-end ">
                     <div class="hidden relative md:flex items-center justify-center">
                         <div class="form-control">
                             <input type="text" placeholder="Search here"
@@ -64,7 +64,7 @@
                             </svg>
                         </label>
                         <ul tabindex="0"
-                            class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content bg-base-100 rounded-box text-black w-52">
+                            class="mt-3 z-40 p-2 shadow menu menu-sm dropdown-content bg-base-100 rounded-box text-black w-52">
                             <li><a>Home</a></li>
                             <li><a>About Us</a></li>
                             <li><a>Shop</a></li>
@@ -570,7 +570,7 @@
             <div class="hidden lg:grid lg:grid-cols-3 mx-auto mt-16 px-4">
                 
                 <div class="space-y-4 mx-auto">
-                    <div class="flex flex-col md:flex-row items-center gap-4">
+                    <div class="flex flex-row items-center gap-4">
                         <i class="fa-solid fa-users fa-2xl" style="color: #d0d2d2;"></i>
                     <div >
                         <h1 class="font-extrabold text-xl">Dedicated Team</h1>
@@ -578,7 +578,7 @@
                         <p class="">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                     </div>
                     </div>
-                    <div class="flex flex-col md:flex-row items-center gap-4">
+                    <div class="flex flex-row items-center gap-4">
                         <i class="fa-solid fa-seedling fa-2xl" style="color: #d0d2d2;"></i>
                     <div >
                         <h1 class="font-extrabold text-xl">Fresh is best</h1>
@@ -586,7 +586,7 @@
                         <p class="">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                     </div>
                     </div>
-                    <div class="flex flex-col md:flex-row items-center gap-4">
+                    <div class="flex flex-row items-center gap-4">
                         <i class="fa-solid fa-gift fa-2xl" style="color: #d0d2d2;"></i>
                     <div >
                         <h1 class="font-extrabold text-xl">Gift Certificate</h1>
@@ -599,15 +599,15 @@
                     <img class="mx-auto p-2 max-w-[320px]" src="./images/whychoose1.png" alt="">
                 </div>
                 <div class="space-y-4 mx-auto text-right">
-                    <div class="flex flex-col md:flex-row-reverse items-center gap-4">
+                    <div class="flex flex-row-reverse items-center gap-4">
                         <i class="fa-solid fa-truck-field fa-2xl" style="color: #d0d2d2;"></i>
                         <div class="flex flex-col items-end ">
                             <h1 class="font-extrabold text-xl">Integrated Supplier</h1>
                             <hr class="border-t-2 border-gray-500 w-1/3">
                         <p class="">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
+                    </div> 
                     </div>
-                    </div>
-                    <div class="flex flex-col md:flex-row-reverse items-center justify-end gap-4">
+                    <div class="flex flex-row-reverse items-center justify-end gap-4">
                         <i class="fa-solid fa-spa fa-2xl" style="color: #d0d2d2;"></i>
                     <div class="flex flex-col items-end ">
                         <h1 class="font-extrabold text-xl">Sustainable Practice</h1>
@@ -616,7 +616,7 @@
                         <p class="">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                     </div>
                     </div>
-                    <div class="flex flex-col md:flex-row-reverse items-center gap-4">
+                    <div class="flex flex-row-reverse items-center gap-4">
                         <i class="fa-solid fa-thumbs-up fa-2xl" style="color: #d0d2d2;"></i>
                         <div class="flex flex-col items-end ">
                             <h1 class="font-extrabold text-xl">The Benefits Only</h1>
@@ -697,12 +697,10 @@
             </div>
         </section>
 
-
-
     </main>
 
     <!-- Footer section -->
-    <footer class="footer footer-center p-10 bg-black text-white rounded mt-16">
+    <footer class="footer footer-center p-5 bg-black text-white rounded mt-16">
         <div class="flex">
             <img src="./images/logo.png" alt="">
             <p class="font-bold text-4xl">Fruit Burst</p>
