--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                             <a class="text-[#F85559] font-bold cursor-pointer" onclick="my_modal_1.showModal()">Details</a>
                             <dialog id="my_modal_1" class="modal">
                                 <form method="dialog" class="modal-box">
-                                    <div class="card w-96 mx-auto bg-base-100 ">
+                                    <div class="card mx-auto bg-base-100 ">
                                         <figure class="px-10 pt-10">
                                           <img src="./images/fruit6.png" alt="" class="rounded-xl" />
                                         </figure>
@@ -316,7 +316,7 @@
                             <a class="text-[#F85559] font-bold cursor-pointer" onclick="my_modal_2.showModal()">Details</a>
                             <dialog id="my_modal_2" class="modal">
                                 <form method="dialog" class="modal-box">
-                                    <div class="card w-96 mx-auto bg-base-100 ">
+                                    <div class="card mx-auto bg-base-100 ">
                                         <figure class="px-10 pt-10">
                                           <img src="./images/fruit7.png" alt="Orange" class="rounded-xl" />
                                         </figure>
@@ -380,7 +380,7 @@
                             <a class="text-[#F85559] font-bold cursor-pointer" onclick="my_modal_3.showModal()">Details</a>
                             <dialog id="my_modal_3" class="modal">
                                 <form method="dialog" class="modal-box">
-                                    <div class="card w-96 mx-auto bg-base-100 ">
+                                    <div class="card mx-auto bg-base-100 ">
                                         <figure class="px-10 pt-10">
                                           <img src="./images/fruit8.png" alt="Shoes" class="rounded-xl" />
                                         </figure>
@@ -445,7 +445,7 @@
                             <a class="text-[#F85559] font-bold cursor-pointer" onclick="my_modal_4.showModal()">Details</a>
                             <dialog id="my_modal_4" class="modal">
                                 <form method="dialog" class="modal-box">
-                                    <div class="card w-96 mx-auto bg-base-100 ">
+                                    <div class="card  mx-auto bg-base-100 ">
                                         <figure class="px-10 pt-10">
                                           <img src="./images/fruit9.png" alt="Banana" class="rounded-xl" />
                                         </figure>
